# forge

./: .gitignore  CMakeLists.txt  CONTRIBUTING  Makefile  README.md  packages.cmake
.cache/clangd/index/: cli.cpp.481EC286A2036730.idx  cli.hpp.B06D07C15DCDC55F.idx  main.cpp.7099A16AD85A67D4.idx
.github/workflows/: cmake-multi-platform.yml
cmake/: CompilerWarnings.cmake
include/forge/: cli.hpp  new_command.hpp  templates.hpp
include/rawr/: cli.hpp
src/: CMakeLists.txt  main.cpp
src/forge/: cli.cpp  new_command.cpp  templates.cpp
src/rawr/: cli.cpp
templates/base/: CMakeLists.txt  Makefile  packages.cmake
templates/base/cmake/: StandardProjectSettings.cmake  UniversalAppleBuild.cmake
templates/base/include/<project_name>/: hello.hpp
templates/base/src/: CMakeLists.txt
templates/base/src/<project_name>/: hello.cpp
templates/base/test/: CMakeLists.txt  hello_test.cpp
test/: CMakeLists.txt  cli_test.cpp  template_test.cpp
